fixed icon visibility

--- a/SAKPaaS/src/app/components/user-card/user-card.component.scss
+++ b/SAKPaaS/src/app/components/user-card/user-card.component.scss
@@ -70,12 +70,14 @@
   }
   #first {
     float: left;
+    width: 34px;
   }
   #second {
     float: left;
   }
   #third {
-    float: left;
+    float: left;    
+    width: 34px;
   }
 
 
